[gd_scene load_steps=4 format=3 uid="uid://bs0f617h5k5u4"]

[ext_resource type="Script" uid="uid://qnvbgg883dg5" path="res://scripts/radial_menu.gd" id="1_nsbp6"]
[ext_resource type="Script" uid="uid://b2liomcfs5kk7" path="res://scripts/hud.gd" id="1_oqdbm"]
[ext_resource type="Texture2D" uid="uid://cdgedffnin6fh" path="res://icon.svg" id="2_64pwb"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oqdbm")

[node name="GameUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Control" type="Control" parent="GameUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Control2" type="Control" parent="GameUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="RadialMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_nsbp6")

[node name="WheelOrigin" type="Control" parent="RadialMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="RomboCentro" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(100, 100)
texture = ExtResource("2_64pwb")

[node name="Icon_Hand_L" type="TextureRect" parent="RadialMenu/WheelOrigin/RomboCentro"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.00006
offset_top = 7.9999847
offset_right = -6.000061
offset_bottom = 87.999985
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)

[node name="Icon_Hand_R" type="TextureRect" parent="RadialMenu/WheelOrigin/RomboCentro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 5.9999847
offset_top = 8.0000305
offset_right = 85.999985
offset_bottom = 88.00003
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)

[node name="Icon_Mask" type="TextureRect" parent="RadialMenu/WheelOrigin/RomboCentro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -94.0
offset_right = 40.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)

[node name="Sector0" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -232.0
offset_right = 62.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector1" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = -139.0
offset_right = 222.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector2" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 95.0
offset_top = 32.0
offset_right = 223.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector3" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 110.0
offset_right = 63.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector4" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = 32.0
offset_right = -102.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")

[node name="Sector5" type="TextureRect" parent="RadialMenu/WheelOrigin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -141.0
offset_right = -100.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_64pwb")
